--- a/Week 2/2.2_cleaning_and_data_manipulation.ipynb
+++ b/Week 2/2.2_cleaning_and_data_manipulation.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {
     "id": "QJEHelbGQtEs"
    },
@@ -386,29 +386,30 @@
     {
      "data": {
       "text/plain": [
-       "PassengerId    False\n",
-       "Survived       False\n",
-       "Pclass         False\n",
-       "Name           False\n",
-       "Sex            False\n",
-       "Age             True\n",
-       "SibSp          False\n",
-       "Parch          False\n",
-       "Ticket         False\n",
-       "Fare           False\n",
-       "Cabin           True\n",
-       "Embarked        True\n",
+       "PassengerId      False\n",
+       "Survived         False\n",
+       "Pclass           False\n",
+       "Name             False\n",
+       "Sex              False\n",
+       "Age               True\n",
+       "SibSP            False\n",
+       "Parch            False\n",
+       "Ticket           False\n",
+       "Fare             False\n",
+       "Cabin             True\n",
+       "Embarked          True\n",
+       "Gender_mapped    False\n",
        "dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check for null values in each column\n",
-    "df.isna().any()"
+    "df.isnull().any()"
    ]
   },
   {
